--- a/css/kasper.css
+++ b/css/kasper.css
@@ -202,7 +202,7 @@ nav .form i {
 /* End Header */
 /* Start Landing */
 .landing {
-  background-image: url(../images/landing.jpg);
+  background-image: url(/images/landing.jpg);
   background-size: cover;
   min-height: 100vh;
   position: relative;
@@ -365,7 +365,7 @@ nav .form i {
   padding-bottom: var(--section-padding);
   display: flex;
   align-items: center;
-  background-image: url(../images/design-features.jpg);
+  background-image: url(/images/design-features.jpg);
   overflow: hidden;
   height: 600px;
   background-size: cover;
