--- a/css/kasper.css
+++ b/css/kasper.css
@@ -202,7 +202,7 @@ nav .form i {
 /* End Header */
 /* Start Landing */
 .landing {
-  background-image: url(/images/landing.jpg);
+  background-image: url(../images/landing.jpg);
   background-size: cover;
   min-height: 100vh;
   position: relative;
@@ -365,7 +365,7 @@ nav .form i {
   padding-bottom: var(--section-padding);
   display: flex;
   align-items: center;
-  background-image: url(/images/design-features.jpg);
+  background-image: url(../images/design-features.jpg);
   overflow: hidden;
   height: 600px;
   background-size: cover;
@@ -633,7 +633,7 @@ nav .form i {
 .stats {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
-  background-image: url(/images/stats.png);
+  background-image: url(../images/stats.png);
   background-size: cover;
   position: relative;
 }
@@ -847,7 +847,7 @@ nav .form i {
 .quote {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
-  background-image: url(/images/quote.jpg);
+  background-image: url(../images/quote.jpg);
   background-size: cover;
   position: relative;
 }
@@ -1032,7 +1032,7 @@ nav .form i {
 .subscribe {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
-  background-image: url(/images/subscribe.jpg);
+  background-image: url(../images/subscribe.jpg);
   position: relative;
   color: white;
   background-size: cover;
@@ -1216,7 +1216,7 @@ footer {
   padding-top: calc(var(--section-padding) / 2);
   padding-bottom: calc(var(--section-padding) / 2);
   position: relative;
-  background-image: url(/images/subscribe.jpg);
+  background-image: url(../images/subscribe.jpg);
   color: white;
   background-size: cover;
 }
